--- a/SistemaElBosquecito/SistemaElBosquecito/Areas/Usuarios/Views/Usuarios/usuarios.cshtml
+++ b/SistemaElBosquecito/SistemaElBosquecito/Areas/Usuarios/Views/Usuarios/usuarios.cshtml
@@ -2,7 +2,7 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    //ESTO ESTABA BACIO, TODO FUE AGREGADO MANUALMENTE
+    //ESTO ESTABA VACIO, TODO FUE AGREGADO MANUALMENTE
     ViewData["Title"] = "Usuarios";
 }
 
