--- a/SistemaElBosquecito/SistemaElBosquecito/Areas/Usuarios/Pages/Cuenta/Registrar.cshtml
+++ b/SistemaElBosquecito/SistemaElBosquecito/Areas/Usuarios/Pages/Cuenta/Registrar.cshtml
@@ -1,7 +1,7 @@
 ﻿@page "/Usuarios/Registrar"
 @model RegistrarModel
 @{
-    var image = "/imagenes/imagenes/user.png";
+    var image = "~/imagenes/imagenes/user.png";
 }
 <div class="container p-4">
     <form method="post" enctype="multipart/form-data">
@@ -10,7 +10,7 @@
                 <div class="card text-center">
                     <div class="card-header ">
                         <output id="imageUser">
-                            <img scr=@image class="img-fluid" alt="image" />
+                            <img scr=@image class="imageUser" />
                         </output>
                     </div>
                     <div class="card-body">
@@ -67,7 +67,7 @@
                                             <span asp-validation-for="Input.Password" class="text-danger"></span>
                                         </div>
                                         <div class="form-group">
-                                           @* @Html.DropDownList("Input.Role", new SelectList(Model.Input.rolesLista, "text", "text"), "Seleccione un rol", new { @class = "form-control" });*@
+                                            @Html.DropDownList("Input.Role", new SelectList(Model.Input.rolesLista, "Text", "Text"), "Seleccione un rol", new { @class = "form-control" })
                                         </div>
                                         <div class="form-group">
                                             <button type="submit" class="btn btn-primary btn-block">Registrar</button>
