--- a/SistemaElBosquecito/SistemaElBosquecito/Views/Shared/_Layout.cshtml
+++ b/SistemaElBosquecito/SistemaElBosquecito/Views/Shared/_Layout.cshtml
@@ -46,6 +46,9 @@
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/Cargarfoto.js" asp-append-version="true"></script>
+    <script src="~/js/Principal.js" asp-append-version="true"></script>
+    <script src="~/js/Usuario.js" asp-append-version="true"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
