--- a/SistemaElBosquecito/SistemaElBosquecito/Areas/Usuarios/Pages/Cuenta/Registrar.cshtml
+++ b/SistemaElBosquecito/SistemaElBosquecito/Areas/Usuarios/Pages/Cuenta/Registrar.cshtml
@@ -1,7 +1,7 @@
 ﻿@page "/Usuarios/Registrar"
 @model RegistrarModel
 @{
-    var image = "~/imagenes/imagenes/user.png";
+    var image = "/imagenes/imagenes/user.png";
 }
 <div class="container p-4">
     <form method="post" enctype="multipart/form-data">
